<?xml version="1.0" encoding="utf-8"?><!--
     Designed and developed 2024 by Mahmood Abdalhafeez

     Licensed under the MIT License (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://opensource.org/licenses/MIT

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="feature_employee_dialog_delete_title">Delete Employee</string>
    <string name="feature_employee_dialog_delete_message">Are you sure you want to delete this Employee?</string>
    <string name="feature_employee_dialog_title_company_code">Company Code</string>
    <string name="feature_employee_dialog_message_company_code">Use scanner to scan QR code to login.</string>
</resources>
