<?xml version="1.0" encoding="utf-8"?><!--
     Designed and developed 2024 by Mahmood Abdalhafeez

     Licensed under the MIT License (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://opensource.org/licenses/MIT

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <!-- onboarding -->
    <string name="feature_onboarding_dialog_exit_title">Confirm Exit</string>
    <string name="feature_onboarding_dialog_exit_message">Are you sure you want to exit the business setup and log out?</string>
    <string name="feature_onboarding_dialog_exit_yes_button_text">Yes</string>
    <string name="feature_onboarding_done_button_text">Done</string>
    <string name="feature_onboarding_previous_button_text">Previous</string>
    <string name="feature_onboarding_next_button_text">Next</string>

    <string name="feature_onboarding_empty_plans_title">No Subscription Plans Available</string>
    <string name="feature_onboarding_empty_plans_message">We couldn\'t find any subscription plans at the moment. Please check back later or contact support for assistance.</string>
    <string name="feature_onboarding_error_branch_limit_reached_message">You have reached the maximum number of branches for your selected plan.</string>
    <string name="feature_onboarding_branch_setup_empty_title">No Branches Added Yet</string>
    <string name="feature_onboarding_branch_setup_empty_message">Get started by adding your first branch. This helps organize your sales, inventory, and staff effectively.</string>
    <string name="feature_onboarding_error_creating_business_message">Failed to setup business. Please try again.</string>
    <string name="feature_onboarding_error_starting_session_message">Failed to start business session. Please try again.</string>

</resources>
