...
                .padding(16.dp)
                .consumeWindowInsets(innerPadding)
                .recalculateWindowInsets(),
        ) {
            if (uiState.isLoading) {
                PosLoadingWheel(
                    "onBoardingLoading",
                    modifier = Modifier.align(Alignment.TopCenter).zIndex(1f),
                )
            }
            HorizontalPager(
                state = pagerState,
                userScrollEnabled = false,
...
