<?xml version="1.0" encoding="utf-8"?><!--
     Designed and developed 2024 by Mahmood Abdalhafeez

     Licensed under the MIT License (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://opensource.org/licenses/MIT

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="feature_supplier_title">Suppliers</string>
  <string name="feature_supplier_empty_title">No suppliers found.</string>
  <string name="feature_supplier_empty_message">Add suppliers to manage your business.</string>
  <string name="feature_supplier_add_title">Add Supplier</string>
  <string name="feature_supplier_add_button_text">Add</string>
  <string name="feature_supplier_update_button_text">Update</string>
  <string name="feature_supplier_update_title">Update Supplier</string>
  <string name="feature_supplier_name_hint">Name</string>
  <string name="feature_supplier_company_name_hint">Company name</string>
  <string name="feature_supplier_phone_hint">Phone</string>
  <string name="feature_supplier_email_hint">Email</string>
  <string name="feature_supplier_address_hint">Address</string>
  <string name="feature_supplier_category_hint">Category</string>
  <string name="feature_supplier_error_name_empty">Name supplier is required</string>
  <string name="feature_supplier_error_company_name_empty">Company Name is required</string>
  <string name="feature_supplier_dialog_delete_title">Delete Supplier</string>
  <string name="feature_supplier_dialog_delete_message">Are you sure you want to delete this Supplier?</string>


  <string name="feature_supplier_add_success_message">Added supplier successfully</string>
  <string name="feature_supplier_update_success_message">Update supplier successfully</string>
  <string name="feature_supplier_update_error_message">Failed to update supplier</string>
  <string name="feature_supplier_delete_success_message">Delete supplier successfully</string>

</resources>